# phprs

./: Cargo.toml  function.php  test.php
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  lsp.rs  main.rs  parse.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs
crates/lexer/tests/: lexer.rs
crates/lexer/tests/cases/: keyword5.php  numericLiterals5.php
crates/lsp/: Cargo.toml
crates/lsp/src/: lib.rs  main.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs  parser.rs
crates/parser/src/parser/: expression.rs  expressions.rs  literal.rs  mod.rs  name.rs  relative_scope.rs  scalar_type.rs  script.rs  statement.rs  statements.rs  util.rs  variable.rs  variables.rs
crates/parser/src/parser/atoms/: breakout_level.rs  class_modifier.rs  class_type_designator.rs  const_element.rs  intrinsic.rs  literal.rs  member_name.rs  method_modifier.rs  mod.rs  name.rs  property_element.rs  property_modifier.rs  relative_scope.rs  scope_resolution_qualifier.rs  static_modifier.rs  type.rs  visibility_modifier.rs
crates/parser/src/parser/class/: class_const_declaration.rs  class_member_declaration.rs  constructor_declaration.rs  destructor_declaration.rs  enum_case_declaration.rs  enum_member_declaration.rs  method_declaration.rs  mod.rs  property_declaration.rs  trait_use_clause.rs
crates/parser/src/parser/expression/: empty_intrinsic.rs  (+3 more)
crates/parserr/: Cargo.toml
crates/parserr/src/parser/: expressions.rs  mod.rs  script.rs  statements.rs  variables.rs
extension/: CHANGELOG.md  README.md  package.json
extension/src/: extension.ts
src/: main.rs
(+126 files in other folders)
