[package]
name = "phprs"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]
default-members = ["crates/cli"]

[workspace.dependencies]
phprs_lexer = { path = "crates/lexer" }
phprs_parser = { path = "crates/parser" }
phprs_lsp = { path = "crates/lsp" }
env_logger = "0.11.8"
log = "0.4.27"
anyhow = "1.0.97"
dotenvy = "0.15.7"
tokio = { version = "1.44.2", features = ["full"] }

[dependencies]
phprs_lexer.workspace = true
phprs_parser.workspace = true
phprs_lsp.workspace = true
