[package]
name = "phprs"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]
default-members = ["crates/cli"]

[workspace.dependencies]
phprs_lexer = { path = "crates/lexer" }
phprs_parser = { path = "crates/parser" }
phprs_lsp = { path = "crates/lsp" }
phprs_cli = { path = "crates/cli" }
env_logger = "0.11.8"
log = "0.4.27"
anyhow = "1.0.97"
dotenvy = "0.15.7"
tokio = { version = "1.44.2", features = ["full"] }

[dependencies]
phprs_cli.workspace = true
tokio.workspace = true
anyhow.workspace = true
